package core_mvc.model;

public interface IObserver
{
    void update(Observable o);
}